# itmo-os-networkfs

./: .gitignore  CMakeLists.txt  Makefile  README.md  entrypoint.c  entrypoint.h  http.h
.github/: prepare_disk.sh
.github/workflows/: networkfs.yml
tests/: basic.py  nfs.py
